[package]
name = "rust-diesel-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
diesel = { version = "2.2.0", features = ["sqlite"] }
tokio = "1.38.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
diesel = { version = "2.2.0", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0" }
