[package]
name = "rust-diesel-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
diesel = { version = "2.2.0", features = ["sqlite"] }
tracing-subscriber = { version = "0.3" }
tokio = { version = "1.38.0", features = ["full"] }
async-stripe = { version = "0.37.1", features = ["runtime-tokio-hyper"] }
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
axum = "0.7.5"
serde_json = "1.0.117"

[build-dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
diesel = { version = "2.2.0", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0" }
